--- a/arch/arm/boot/dts/versatile-pb-adi-emu.dts
+++ b/arch/arm/boot/dts/versatile-pb-adi-emu.dts
@@ -14,5 +14,14 @@
 		compatible = "adi,spi-adi-emu";
 		#address-cells = <1>;
 		#size-cells = <0>;
+
+		/*
+		* Reg property respresents the CS line of the SPI device
+		*/
+		iio_adi_emu@0 {
+			compatible = "iio-adi-emu";
+			reg = <0x0>;
+			spi-max-frequency = <1000000>;
+		};
 	};
 };
